Change json key from snake_case to camelCase
